<resources>
    <string name="app_name">Tennis Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Matches</string>
    <string name="second_fragment_label">Create Match</string>
    <string name="next">Next</string>
    <string name="see_other_matchs">See other matchs</string>
    <string name="create_match">Create</string>
    <string name="spinner_helper">Select your player</string>
    <string name="input_player1">Select the 1st player</string>
    <string name="input_player2">Select the 2nd player</string>

    <string name="hello_first_fragment">Match resume</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_view_match">ViewMatch</string>
    <string name="see_on_map">See on the map</string>
    <string name="previous">Previous</string>
</resources>